2003-04-23  Andrew Cagney  <cagney@redhat.com>

	* infcall.c (call_function_by_hand): Eliminate the variables "rc"
	and "buffer".  Move the "name" code to where it is needed.

2003-04-23  Andrew Cagney  <cagney@redhat.com>

	* infcall.c (call_function_by_hand): Move variables "start_sp",
	"dummy", "sizeof_dummy1" and "dummy1" and corresponding dummy call
	code to ON_STACK switch branch.
	
2003-04-23  Andrew Cagney  <cagney@redhat.com>

	* infcall.c (call_function_by_hand): Make declaration of "i",
	"sal", "bpt" and "old_sp" more local to their use.  Delete #if
	lint.

2003-04-23  Andrew Cagney  <cagney@redhat.com>

	* infcall.c (call_function_by_hand): Delete variable
	"n_method_args".  Localize "param_type"'s declaration to the loop
	that it is used.  Reinstate code assigning to said variable -
	deleted on 2002-06-14.  Rationalize calls to value_args_coerce.
	Rationalize code using "param_type".

2003-04-22  Andrew Cagney  <cagney@redhat.com>

	* infcall.c (call_function_by_hand): Use new variable "bp_addr" to
	compute the breakpoint address.  Only call FIX_CALL_DUMMY when
	ON_STACK.  Eliminate the variable "addr".  Do not pass "real_pc"
	to DEPRECATED_PUSH_RETURN_ADDRESS.

2003-04-22  Kevin Buettner  <kevinb@redhat.com>

	* dwarf2loc.c (dwarf2_evaluate_loc_desc): Invoke DWARF2_REG_TO_REGNUM
	on the DWARF2 register number prior to fetching a register.

2003-04-22  J. Brobecker  <brobecker@gnat.com>

	* config/pa/tm-hppa.h (SOFT_FLOAT): Delete this macro.
	Update all the tests using SOFT_FLOAT considering the fact that
	this macro was always set to 0. 
	* config/pa/tm-hppa64.h: Update all the tests using SOFT_FLOAT
	considering the fact that this macro was always set to 0.
	* hppa-tdep.h (hppa_store_return_value): Likewise.
	(hppa_extract_return_value): Likewise.

2003-04-22  J. Brobecker  <brobecker@gnat.com>

	* config/pa/tm-hppa.h: Remove obsolete code, was used by
	the hppa-pro target only.

2003-04-21  J. Brobecker  <brobecker@gnat.com>
